--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "lucide-react": "^0.454.0",
-    "next": "^15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
+    "next": "^15.1.5",
+    "react": "^19.0.0-rc-de68d2f4-20241204",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
   "devDependencies": {
