--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "lucide-react": "^0.454.0",
-    "next": "^15.1.5",
-    "react": "^19.0.0-rc-de68d2f4-20241204",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+   "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "14.2.4"
   },
   "devDependencies": {
     "eslint": "^8",
