--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "lucide-react": "^0.454.0",
-   "react": "^18.2.0",
+    "next": "14.2.4",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "14.2.4"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
